--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.6.1"
+  },
+  "devDependencies": {
+    "minimist": "^1.2.5"
   }
 }
